modify post oracle表迁移

--- a/source/_posts/2014-10-10-oracle表迁移.md
+++ b/source/_posts/2014-10-10-oracle表迁移.md
@@ -14,15 +14,15 @@ tags:
 ## 将USERS表空间下QUERY用户下的所有表迁移到DATA01表空间
 <!-- more -->
 #### 1、修改用户默认表空间
-{% codeblock %}
+{% codeblock lang:bash %}
 alter user QUERY default tablespace DATA01;
 {% endcodeblock %}
 #### 2、迁移表到新的表空间SQL执行语句
-{% codeblock %}
+{% codeblock lang:bash %}
 select 'alter table '||v.owner||'.'|| v.table_name ||' move tablespace DATA01;' from dba_tables v where v.tablespace_name='USERS' and v.owner='QUERY';
 {% endcodeblock %}
 #### 3、创建索引重建的SQL执行语句
-{% codeblock %}
+{% codeblock lang:bash %}
 select 'alter index '||w.owner||'.'|| w.index_name ||' rebuild tablespace DATA01;' from dba_indexes w where w.owner='QUERY';
 {% endcodeblock %}
 
