modify the post

--- a/source/_posts/2016-02-18-markdown学习.md
+++ b/source/_posts/2016-02-18-markdown学习.md
@@ -2,9 +2,9 @@
 title: markdown学习
 date: 2016-02-18 13:29:32
 categories:
-- makedown
+- markdown
 tags:
-- makedown
+- markdown
 ---
 1.标题设置（让字体变大，和word的标题意思一样）
 
