modify the error word

--- a/source/_posts/2017-05-11-解决ubuntu下搜狗输入法不能输入中文.md
+++ b/source/_posts/2017-05-11-解决ubuntu下搜狗输入法不能输入中文.md
@@ -18,7 +18,7 @@ tags:
 #### 方法一、重启搜狗输入法
 {% codeblock lang:bash %}
 killall fcitx
-killall sogou-qinpanel
+killall sogou-qimpanel
 fcitx
 {% endcodeblock %}
 
